overflow fix

--- a/assets/_scss/_global.scss
+++ b/assets/_scss/_global.scss
@@ -1,10 +1,17 @@
 // Global styling for this template
+
+html {
+    font-size: 1em;
+    overflow-x: hidden;
+}
+
 body {
     @include body-font;
     padding-top: 0px;
     color: $gray-700;
     padding-left: $sidebar-base-width;
-  }
+    overflow-x: hidden;
+}
 
 @media (max-width: 991.9px) {
     body {
