--- a/assets/_scss/_main.scss
+++ b/assets/_scss/_main.scss
@@ -8,11 +8,6 @@
     }
 }
 
-html {
-    font-size: 1em;
-    overflow-x: hidden;
-}
-
 .footer-social {
     color: rgba(255, 255, 255, .5);
     b {
